--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -124,49 +125,58 @@
                     <link rel="dns-prefetch" href="https://images.converteai.net">
                     <link rel="dns-prefetch" href="https://api.vturb.com.br"> </div>
             </div>
-            <div class="elementor-element elementor-element-f672957 headline elementor-widget elementor-widget-text-editor" data-id="f672957" data-element_type="widget" data-widget_type="text-editor.default">
+            <div class="elementor-element elementor-element-f672957  elementor-widget elementor-widget-text-editor" data-id="f672957" data-element_type="widget" data-widget_type="text-editor.default">
                 <div class="elementor-widget-container">
                     <style>/*! elementor - v3.16.0 - 12-09-2023 */
                     .elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#69727d;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#69727d;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style> <span style="background-color: #ff0000;">A MÁFIA DOS CASSINOS ONLINE FOI REVELADA</span> </div>
             </div>
-            <div class="elementor-element elementor-element-3c045c5 headline elementor-widget elementor-widget-text-editor" data-id="3c045c5" data-element_type="widget" data-widget_type="text-editor.default">
+            <div class="elementor-element elementor-element-3c045c5  elementor-widget elementor-widget-text-editor" data-id="3c045c5" data-element_type="widget" data-widget_type="text-editor.default">
                 <div class="elementor-widget-container">
                     PESSOAS LESADAS ESTÃO RECUPERANDO<br> O QUE PERDERAM EM TEMPO RECORDE </div>
             </div>
             <div class="elementor-element elementor-element-67214f5 elementor-widget elementor-widget-html" data-id="67214f5" data-element_type="widget" data-widget_type="html.default">
                 <div class="elementor-widget-container">
                     <div id="vid_6501a9f202d65b000a08f041" style="position:relative;width:100%;padding: 125% 0 0;"><img id="thumb_6501a9f202d65b000a08f041" src="https://images.converteai.net/92be81cf-06f2-4dc3-9145-e762e8be94b8/players/6501a9f202d65b000a08f041/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6501a9f202d65b000a08f041" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6501a9f202d65b000a08f041">var s=document.createElement("script");s.src="https://scripts.converteai.net/92be81cf-06f2-4dc3-9145-e762e8be94b8/players/6501a9f202d65b000a08f041/player.js",s.async=!0,document.head.appendChild(s);</script>                    <style>
-                        .delay {
-                            display: none
-                        }
-                    </style>
+                    .delay {
+                        display: block;
+                    }
+                </style>
                     <script type="text/javascript">
                         document.addEventListener("DOMContentLoaded", function() {
-                            /* ALTERE O VALOR 10 PARA OS SEGUNDOS EM QUE AS SEÇÕES VÃO APARECER */
-                            var SECONDS_TO_DISPLAY = 365;
-                            var CLASS_TO_DISPLAY = ".delay";
+                            // /* ALTERE O VALOR 10 PARA OS SEGUNDOS EM QUE AS SEÇÕES VÃO APARECER */
+                            // var SECONDS_TO_DISPLAY = 365;
+                            // var CLASS_TO_DISPLAY = ".delay";
+                            //
+                            // /* DAQUI PARA BAIXO NAO PRECISA ALTERAR */
+                            // var attempts = 0;
+                            // var elsHiddenList = [];
+                            // var elsDisplayed = false;
+                            // var elsHidden = document.querySelectorAll(CLASS_TO_DISPLAY);
+                            // var alreadyDisplayedKey = `alreadyElsDisplayed${SECONDS_TO_DISPLAY}`
+                            // var alreadyElsDisplayed = localStorage.getItem(alreadyDisplayedKey);
+                            // var headlines = document.querySelectorAll('.headline');
+                            //
+                            // setTimeout(function() {
+                            //     elsHiddenList = Array.prototype.slice.call(elsHidden);
+                            // }, 0);
+                            //
+                            // var showHiddenElements = function() {
+                            //     elsDisplayed = true;
+                            //     elsHiddenList.forEach((e) => e.style.display = "block");
+                            //     localStorage.setItem(alreadyDisplayedKey, true);
+                            //     headlines.forEach(function(headline) {
+                            //         headline.style.display = "none";
+                            //     });
+                            // }
 
-                            /* DAQUI PARA BAIXO NAO PRECISA ALTERAR */
-                            var attempts = 0;
-                            var elsHiddenList = [];
-                            var elsDisplayed = false;
-                            var elsHidden = document.querySelectorAll(CLASS_TO_DISPLAY);
-                            var alreadyDisplayedKey = `alreadyElsDisplayed${SECONDS_TO_DISPLAY}`
-                            var alreadyElsDisplayed = localStorage.getItem(alreadyDisplayedKey);
-                            var headlines = document.querySelectorAll('.headline');
+                            let sumir = document.getElementById('hidden');
 
                             setTimeout(function() {
-                                elsHiddenList = Array.prototype.slice.call(elsHidden);
-                            }, 0);
-
-                            var showHiddenElements = function() {
-                                elsDisplayed = true;
-                                elsHiddenList.forEach((e) => e.style.display = "block");
-                                localStorage.setItem(alreadyDisplayedKey, true);
-                                headlines.forEach(function(headline) {
-                                    headline.style.display = "none";
-                                });
-                            }
+                                sumir.style.display = 'block';
+                                    if (sumir.style.display === 'block') {
+                                        sumir.style.display = "none";
+                                    }
+                                }, 368000);
 
                             var startWatchVideoProgress = function() {
                                 if (typeof smartplayer === 'undefined' || !(smartplayer.instances && smartplayer.instances
@@ -202,24 +212,24 @@
 <span class="elementor-icon-list-icon">
 <i class="fa fa-check" aria-hidden="true"></i>
 </span>
-                        <span class="elementor-icon-list-text">O APLICATIVO SERÁ LIBERADO AO FINAL DESTE VÍDEO</span>
+                        <span id="hidden" style="display:block" class="elementor-icon-list-text">O APLICATIVO SERÁ LIBERADO AO FINAL DESTE VÍDEO</span>
                     </li>
                 </ul>
                 </div>
             </div>
-            <div class="elementor-element elementor-element-bfae4e5 delay e-con-full e-flex e-con e-parent" data-id="bfae4e5" data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;,&quot;container_type&quot;:&quot;flex&quot;}" data-core-v316-plus="true">
-                <div class="elementor-element elementor-element-8ed2378 elementor-align-justify elementor-mobile-align-justify botao elementor-widget__width-inherit elementor-widget elementor-widget-button" data-id="8ed2378" data-element_type="widget" data-widget_type="button.default">
-                    <div class="elementor-widget-container">
-                        <div class="elementor-button-wrapper">
-                            <a class="elementor-button elementor-button-link elementor-size-md" href="https://go.perfectpay.com.br/PPU38CMQ8OA">
-<span class="elementor-button-content-wrapper">
-<span class="elementor-button-text">GARANTIR MEU ACESSO AGORA!</span>
-</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!--            <div class="elementor-element elementor-element-bfae4e5 delay e-con-full e-flex e-con e-parent" data-id="bfae4e5" data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;,&quot;container_type&quot;:&quot;flex&quot;}" data-core-v316-plus="true">-->
+            <!--                <div class="elementor-element elementor-element-8ed2378 elementor-align-justify elementor-mobile-align-justify botao elementor-widget__width-inherit elementor-widget elementor-widget-button" data-id="8ed2378" data-element_type="widget" data-widget_type="button.default">-->
+            <!--                    <div class="elementor-widget-container">-->
+            <!--                        <div class="elementor-button-wrapper">-->
+            <!--                            <a class="elementor-button elementor-button-link elementor-size-md" href="https://go.perfectpay.com.br/PPU38CMQ8OA">-->
+            <!--<span class="elementor-button-content-wrapper">-->
+            <!--<span class="elementor-button-text">GARANTIR MEU ACESSO AGORA!</span>-->
+            <!--</span>-->
+            <!--                            </a>-->
+            <!--                        </div>-->
+            <!--                    </div>-->
+            <!--                </div>-->
+            <!--            </div>-->
             <div class="elementor-element elementor-element-664c20a e-con-full e-flex e-con e-parent" data-id="664c20a" data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;,&quot;container_type&quot;:&quot;flex&quot;}" data-core-v316-plus="true">
                 <div class="elementor-element elementor-element-568cf77 elementor-widget-mobile__width-initial elementor-widget elementor-widget-image" data-id="568cf77" data-element_type="widget" data-widget_type="image.default">
                     <div class="elementor-widget-container">
